--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@600;700&display=swap');
 
+.scale-wrapper {
+  transform: scale(1.5);
+  transform-origin: top center;
+  width: 100%;
+}
+
+@media (min-width: 768px) and (max-width: 900px) {
+  .tablet\:flex-col {
+    flex-direction: column !important;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 900px) {
+  .tablet-text-fix {
+    font-size: 4.9rem !important; /* similar a ~text-7xl */
+  }
+}
+
+
+
 /* ============================= */
 /* 🎨 VARIABLES */
 :root {
   --color-bandera-azul: #4273B8;
   --color-bandera-rojo: #CE1126;
   --color-bandera-blanco: #FFFFFF;
-
+  --ring-size: 200px; /* ← Controla qué tan grueso es el anillo */
   --color-gris-oscuro: #1E1E1E;
   --color-gris-medio: #9CA3AF;
   --color-gris-claro: #F3F4F6;
